Updated SAM pipeline

--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -26,13 +26,77 @@
    "id": "0ce7c12e-b766-4a16-b3f0-bdd591d13519",
    "metadata": {},
    "source": [
-    "## 1. Import necessaries libraries and SAM"
+    "## 1. Import necessary libraries and SAM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d26e7472-b166-4f7f-a767-8d4928e66d04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0089877-7380-47de-af6f-142bdc2e5564",
+   "metadata": {},
+   "source": [
+    "## 2. Take image with GPhoto2 Open-source camera control library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9a9361-7846-4f4b-8517-32a6602881aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9311df7c-3ef1-4440-a4b1-4e766ac8b560",
+   "metadata": {},
+   "source": [
+    "## 3. Augment and process image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d30ca212-b9a1-4efd-b7d8-7ea1054cfbd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3868a30-d26c-434d-9cba-f83359f471c2",
+   "metadata": {},
+   "source": [
+    "## 4. Send image through SAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1817e8f5-b7a0-4c07-a73f-a86ae388a331",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d0dca4c-34ab-4b30-9259-5cf2c9f9c2f2",
+   "metadata": {},
+   "source": [
+    "## 5. Display segmented image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7de45c2c-b4bc-4515-a5a6-85138a99b9c1",
    "metadata": {},
    "outputs": [],
    "source": []
