Updated pipeline and added requirements

--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -35,7 +35,19 @@
    "id": "d26e7472-b166-4f7f-a767-8d4928e66d04",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "import os\n",
+    "import gphoto2 as gp \n",
+    "import logging\n",
+    "import locale\n",
+    "import subprocess\n",
+    "import sys\n",
+    "import mimetypes\n",
+    "import datetime\n",
+    "import traceback\n",
+    "from pathlib import Path"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,7 +63,11 @@
    "id": "0d9a9361-7846-4f4b-8517-32a6602881aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "camera = gp.check_result(gp.gp_camera_new())\n",
+    "image_file = camera.trigger_capture()\n",
+    "print(image_file)\n"
+   ]
   },
   {
    "cell_type": "markdown",
