--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -18,7 +18,12 @@
     "2. Take image with GPhoto2 Open-source camera control library\n",
     "3. Augment and process image\n",
     "4. Send image through SAM\n",
-    "5. Display segmented image"
+    "5. Display segmented image\n",
+    "\n",
+    "Requirements:\n",
+    "* Camera comptabile with GPhoto2\n",
+    "* Linux operating system\n",
+    "* GPU for SAM processing\n"
    ]
   },
   {
@@ -27,6 +32,16 @@
    "metadata": {},
    "source": [
     "## 1. Import necessary libraries and SAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64d8b691-65c5-4dd4-bf82-eaddc637f817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -113,6 +128,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7de45c2c-b4bc-4515-a5a6-85138a99b9c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d6e942-602b-4404-a6b1-3b323d4bac8d",
    "metadata": {},
    "outputs": [],
    "source": []
