--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# install requirements\n",
     "!pip install -r requirements.txt"
    ]
   },
@@ -51,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import python libraries\n",
     "import time\n",
     "import os\n",
     "import gphoto2 as gp \n",
@@ -62,6 +64,16 @@
     "import datetime\n",
     "import traceback\n",
     "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f34afd1-0d60-451e-8936-cf5890b8f9e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import SAM\n"
    ]
   },
   {
