--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -37,52 +37,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d8b691-65c5-4dd4-bf82-eaddc637f817",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# install requirements\n",
-    "!pip install -r requirements.txt\n",
-    "!pip install git+https://github.com/facebookresearch/segment-anything.git\n",
-    "!pip install -U numpy<2\n",
-    "!pip uninstall -y torch\n",
-    "!pip uninstall -y torchvision\n",
-    "!pip uninstall -y torchaudio\n",
-    "!pip install -U matplotlib\n",
-    "!pip install torch-2.5.0a0+872d972e41.nv24.08.17622132-cp310-cp310-linux_aarch64.whl\n",
-    "!wget raw.githubusercontent.com/pytorch/pytorch/5c6af2b583709f6176898c017424dc9981023c28/.ci/docker/common/install_cusparselt.sh "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d26e7472-b166-4f7f-a767-8d4928e66d04",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import python libraries\n",
-    "import time\n",
-    "import os\n",
-    "import gphoto2 as gp \n",
-    "import logging\n",
-    "import locale\n",
-    "import subprocess\n",
-    "import sys\n",
-    "import mimetypes\n",
-    "import datetime\n",
-    "import traceback\n",
-    "from pathlib import Path\n",
     "import numpy as np\n",
+    "import torch \n",
     "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
-    "import torch\n",
-    "import torchvision\n",
-    "\n",
+    "import cv2 \n",
+    "import sys\n",
+    "import os\n",
+    "import gphoto2 as gp\n",
+    "!wget https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\n",
     "from segment_anything import SamAutomaticMaskGenerator, sam_model_registry\n",
-    "sam = sam_model_registry[\"vit_h\"](checkpoint=\"sam_vit_h_4b8939.pth\")\n",
-    "sam.to(device='cuda')\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "sam_checkpoint = \"sam_vit_h_4b8939.pth\"\n",
+    "model_type = \"vit_h\"\n",
+    "device = \"cuda\"\n",
+    "sam = sam_model_registry[model_type](checkpoint=sam_checkpoint)\n",
+    "sam.to(device=device)\n",
+    "\n",
     "mask_generator = SamAutomaticMaskGenerator(sam)\n"
    ]
   },
@@ -113,7 +89,7 @@
     "    folder = file_path.folder\n",
     "\n",
     "    # define where to store image, local directory in this case\n",
-    "    target_path = os.path.join(ohttps://developer.download.nvidia.com/compute/redist/jp/v51/pytorch/torch-1.14.0a0+44dac51c.nv23.01-cp38-cp38-linux_aarch64.whls.getcwd(), \"test1.jpg\")\n",
+    "    target_path = os.path.join(os.getcwd(), \"test1.jpg\")\n",
     "\n",
     "    # download file from camera to host\n",
     "    print(f\"Saving image to {target_path}\")\n",
@@ -144,11 +120,11 @@
    "outputs": [],
    "source": [
     "# load image into cv2\n",
-    "image_1 = cv2.imread(target_path)\n",
-    "image_1 = cv2.cvtColor(image_1, cv2.COLOR_BGR2RGB)\n",
+    "image = cv2.imread(target_path)\n",
+    "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "plt.figure(figsize=(15,15))\n",
-    "plt.imshow(image_1)\n",
+    "plt.imshow(image)\n",
     "plt.axis('off')\n",
     "plt.show()\n"
    ]
@@ -168,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = mask_generator.generate(image_1)"
+    "masks = mask_generator.generate(image)"
    ]
   },
   {
@@ -197,12 +173,12 @@
     "    img[:,:,3] = 0\n",
     "    for ann in sorted_anns:\n",
     "        m = ann['segmentation']\n",
-    "        color_mask = np.concatenate([np.random.random(3), [0.35])\n",
+    "        color_mask = np.concatenate([np.random.random(3), [0.35]])\n",
     "        img[m] = color_mask\n",
     "    ax.imshow(img)\n",
     "\n",
     "plt.figure(figsize=(15,15))\n",
-    "plt.imshow(image_1)\n",
+    "plt.imshow(image)\n",
     "show_anns(masks)\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -225,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
