--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -48,6 +48,7 @@
     "import cv2 \n",
     "import sys\n",
     "import os\n",
+    "import time\n",
     "import gphoto2 as gp\n",
     "!wget https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\n",
     "from segment_anything import SamAutomaticMaskGenerator, sam_model_registry\n",
@@ -144,7 +145,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = mask_generator.generate(image)"
+    "start = time.time()\n",
+    "masks = mask_generator.generate(image)\n",
+    "end = time.time()\n",
+    "\n",
+    "print(f\"SAM took {start - end} seconds to segment.\")"
    ]
   },
   {
