removed intermediate step and added warning

--- a/NVIDIA scripts/SAM Pipeline.ipynb
+++ b/NVIDIA scripts/SAM Pipeline.ipynb
@@ -23,7 +23,9 @@
     "Requirements:\n",
     "* Camera comptabile with GPhoto2\n",
     "* Linux operating system\n",
-    "* GPU for SAM processing\n"
+    "* GPU for SAM processing\n",
+    "\n",
+    "DON'T UNPLUG CAMERA AFTER STARTING DOCKER CONTAINER\n"
    ]
   },
   {
@@ -102,32 +104,15 @@
     "\n",
     "finally:\n",
     "    camera.exit()\n",
-    "    print(\"Success\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9311df7c-3ef1-4440-a4b1-4e766ac8b560",
-   "metadata": {},
-   "source": [
-    "## 3. Augment and process image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d30ca212-b9a1-4efd-b7d8-7ea1054cfbd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load image into cv2\n",
-    "image = cv2.imread(target_path)\n",
-    "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    print(\"Success\")\n",
+    "    # load image into cv2\n",
+    "    image = cv2.imread(target_path)\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "plt.figure(figsize=(15,15))\n",
-    "plt.imshow(image)\n",
-    "plt.axis('off')\n",
-    "plt.show()\n"
+    "    plt.figure(figsize=(15,15))\n",
+    "    plt.imshow(image)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -135,7 +120,7 @@
    "id": "d3868a30-d26c-434d-9cba-f83359f471c2",
    "metadata": {},
    "source": [
-    "## 4. Send image through SAM"
+    "## 3. Send image through SAM"
    ]
   },
   {
@@ -157,7 +142,7 @@
    "id": "4d0dca4c-34ab-4b30-9259-5cf2c9f9c2f2",
    "metadata": {},
    "source": [
-    "## 5. Display segmented image"
+    "## 4. Display segmented image"
    ]
   },
   {
